fix: org-chart >> gap between toolbar and chart nodes and nodes over flow bugs  (#144)
org-chart >> gap between toolbar
chart nodes and nodes over flow bugs
delete icon added for red color: icon-delete-danger

--- a/src/scss/filejet-scss/_icon.scss
+++ b/src/scss/filejet-scss/_icon.scss
@@ -390,6 +390,9 @@
   &:hover {
     background-image: url("../../../dist/images/icons/delete-red.svg");
   }
+  &.icon-delete-danger{
+    background-image: url("../../../dist/images/icons/delete-red.svg");
+  }
 }
 
 .icon-delete-white {
